--- a/styles.css
+++ b/styles.css
@@ -6,9 +6,14 @@ main{
     display: grid;
     grid-template-columns: 2fr 1fr;
     padding-left: 11px;
-    margin-top: 3rem;
+    margin-top: 4rem;
 }
 
+footer{
+    text-align: center;
+    margin-top: 2rem;
+    padding: 7rem 0 0 0;
+}
 .profile-pic{
     border-radius: 10%;
     width: 100%;
@@ -26,4 +31,12 @@ main{
 .icon{
     margin-right: 2rem;
     font-size: 2rem;
+}
+
+.about-txt{
+    margin-top: 1.5rem;
+}
+
+.skills{
+    margin-top: 5rem;
 }
